# AV-Binance-Trading

./: .gitattributes  .gitignore  Makefile  README.md  dev.env  prospector.yml  pyproject.toml  requirements.txt  top_worst_crypto_view.py
.github/workflows/: CI.yml
av_crypto_trading/: crud.py  database.py  main.py  models.py  pages.json  schemas.py
av_crypto_trading/core/: backtesting.py  binance_api.py  cli.py  contants.py  converters.py  database_api.py  orchestrator.py  strategies.py  streams.py  utils.py
av_crypto_trading/graphics/: graphics_service.py  histograms.py  utils.py
av_crypto_trading/predictions/: data_extractors.py  models.py
av_crypto_trading/reinforcement_learning/: my_stocks_env.py  training_config.py
av_crypto_trading/twitter/: tweety.py  utils.py
core/: backtesting.py  binance.py  contants.py  converters.py  models.py  strategies.py  streams.py  utils.py
core/tests/: conftest.py  fixtures.py  test_backtesting.py  test_binance.py  test_converters.py  test_streams.py  test_utils.py
examples/: animated_coin_price_plot.py  bot_entrypoint.py  live_strategy_MACD_bitcoin.py  live_strategy_SMA_crossover_bitcoin.py  live_strategy_momentum_bitcoin.py  live_strategy_trailing_stop_loss_bitcoin.py  live_top_symbol_high_risk.py  start_all_crypto_binance_stream.py  start_all_crypto_ubwa_stream.py  start_bitcoin_stream.py  strategy_naive_bitcoin.py
examples/entrypoint/: live_strategy_SMA_crossover_bitcoin.py  live_strategy_Stoch_RSI_MACD_bitcoin.py  live_strategy_trend_bitcoin.py  start_all_crypto_binance_stream.py  start_bitcoin_stream.py  strategy_naive_bitcoin.py
examples/reinforcement_learning/: 1_RL_trading_exploration.ipynb  2_DI_engine_trading_demo.ipynb  train_dqn_bot.py
features/: live_strategy_MACD_bitcoin.py  live_strategy_SMA_crossover_bitcoin.py  live_strategy_Stoch_RSI_MACD_bitcoin.py  live_strategy_TSL_bitcoin.py  live_strategy_momentum_bitcoin.py  live_strategy_trend_bitcoin.py  live_top_symbol_high_risk.py  start_all_crypto_binance_stream.py  start_all_crypto_ubwa_stream.py  start_bitcoin_stream.py  strategy_FastSMA_SlowSMA_multiply_coins.py  strategy_naive_bitcoin.py
features/streamlit/: animated_coin_price_plot.py
frontend/: constants.py  database.py  main_app.py  utils.py
frontend/pages/: forecasting.py  home.py  live performing crypto view.py  logout.py  tweets.py
graphics/: histograms.py  utils.py
graphics/tests/: conftest.py  (+4 more)
predictions/: data_extractors.py  predict_models.py
tests/: conftest.py  test_daily_data.csv  test_data_daily_klines_binance_btc_20.csv  test_data_daily_klines_yahoo_btc_20.csv  test_data_daily_klines_yahoo_tesla_10.csv  test_data_db.csv  test_data_dirty_tweets.csv  test_data_minute_klines.csv  test_data_position_checks.csv  test_data_position_checks_basic.csv  test_data_stream.csv
twitter/: tweety.py  utils.py
(+20 files in other folders)
